Kafka producer in Notebook-user service, Kafka listener in Mailing service, improvements to Notebook-user