@@ -5,6 +5,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import pro.vaidas.notebookuser.bootstrap.AddUser;
 import pro.vaidas.notebookuser.mapper.UserMapper;
+import pro.vaidas.notebookuser.model.KafkaMessageFromUser;
+import pro.vaidas.notebookuser.model.Role;
 import pro.vaidas.notebookuser.model.User;
 import pro.vaidas.notebookuser.repository.UserRepository;
 import pro.vaidas.notebookuser.service.MailingService;
@@ -13,8 +15,10 @@ import pro.vaidas.notebookuser.service.UserService;
 
 import java.io.IOException;
 import java.net.URISyntaxException;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.Random;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -50,40 +54,73 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public Optional<User> getUserById(UUID id){
+    public Optional<User> getUserById(UUID id) {
         return repository.findById(id).map(mapper::userDAOToUser);
     }
 
     @Override
     public Optional<User> findUserByEmail(String email) {
-    List<User> list = repository.findByEmail(email)
-            .stream()
-            .map(found -> mapper.userDAOToUser(found))
-            .collect(Collectors.toList());
-        System.out.println(list);
+        List<User> list = repository.findByEmail(email)
+                .stream()
+                .map(found -> mapper.userDAOToUser(found))
+                .toList();
 
-        if (list.isEmpty()){ return null;}
-        else { return Optional.ofNullable(list.get(0));}
+        User user;
+        if (list.isEmpty()) {
+            user = null;
+        } else {
+            user = list.get(0);
+        }
+
+        if (user == null) {
+            return Optional.empty();
+        } else {
+            return Optional.of(user);
+        }
     }
 
+
     @Override
-    public Boolean userExistsByEmail(String email){
+    public Boolean userExistsByEmail(String email) {
         return !repository.findByEmail(email).isEmpty();
-        }
+    }
 
     @Override
     public void saveUser(User user) throws IOException, URISyntaxException {
-        repository.save(mapper.userToUserDAO(user));
-        //        mail.sendEmail(user.getEmail());
+        // Without setting UUID here, the roles would not know which ID to set in joinCollumn
+        user.setId(UUID.randomUUID());
+        if (user.getRole().toString().toLowerCase().contains("admin")) {
+            List<Role> list = new ArrayList<>();
+            list.add(Role.builder().id(new Random().nextInt()).role("ADMIN").build());
+            user.setRole(list);
+            // Admin automatically activated
+            user.setActivated(true);
+            repository.save(mapper.userToUserDAO(user));
+        } else {
+            List<Role> list = new ArrayList<>();
+            list.add(Role.builder().id(new Random().nextInt()).role("USER").build());
+            user.setRole(list);
+            repository.save(mapper.userToUserDAO(user));
+        }
     }
 
     @Override
-    public String setDefaultUserRole(){
+    public String setDefaultUserRole() {
         return null;
     }
 
     @Override
-    public void deleteUser(UUID id){
+    public void deleteUser(UUID id) {
         repository.deleteById(id);
     }
+
+    @Override
+    public KafkaMessageFromUser makeKafkaUser(User user, String event){
+        return KafkaMessageFromUser.builder()
+                .email(user.getEmail())
+                .name(user.getName())
+                .eventType(event)
+                .build();
+    }
+
 }
